basic files implemented

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Book Store</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/standard.css" />
+    <script src="./scripts/arrays.js"></script>
+    <script src="./scripts/templates.js"></script>
+    <title>Book Store</title>
+  </head>
+  <body>
+    <h1>Book Store</h1>
+  </body>
+  <script src="script.js"></script>
 </html>
+
