book layout ready

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <title>Book Store</title>
   </head>
   <body>
-    <h1>Book Store</h1>
+    <header>
+      <h1>Book Store</h1>
+    </header>
   </body>
   <script src="script.js"></script>
 </html>
-
