--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
     <main>
       <!-- book-section -->
       <section class="book-section">
-        <div class="wrapper">
+        <div id="bookWrapper" class="wrapper">
+          
           <div class="book-container">
             <div class="bookBox"></div>
             <div class="commentBox"></div>
+            <div class="divider"></div>
           </div>
 
-          <div class="divider"></div>
         </div>
       </section>
     </main>
