comments rendering ready

--- a/index.html
+++ b/index.html
@@ -24,9 +24,29 @@
       <section class="book-section">
         <div id="bookWrapper" class="wrapper">
           
+          <!-- getBookContainerTemplate -->
           <div class="book-container">
             <div class="bookBox"></div>
-            <div class="commentBox"></div>
+            <div class="commentContainer">
+
+              <div class="commentBoxUpperPart">
+                <div class="commentInputArea">
+                  <input id="inputName" class="input-name" type="text" placeholder="Dein Name"></inpu>
+                  <input id="inputComment" class="input-comment" type="text" placeholder="Deine Bewertung"></inpu>
+                </div>
+                <button id="commentSendButton" class="comment-send-button">Bewertung abgeben</button>
+              </div>
+
+              <div class="commentBoxLowerPart">
+              </div>
+
+              <!-- getBookCommentsTemplate -->
+              <!-- <div class="commentContent">
+                <p></p>
+                <p></p>
+              </div> -->
+
+            </div>
             <div class="divider"></div>
           </div>
 
