--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <link rel="stylesheet" href="./css/standard.css" />
     <link rel="stylesheet" href="./css/templates.css" />
     <link rel="stylesheet" href="style.css" />
-    <script src="./scripts/arrays.js"></script>
-    <script src="./scripts/templates.js"></script>
     <title>Book Store</title>
   </head>
-  <body onload="">
+  <body>
     <!-- header -->
     <header>
       <div class="wrapper">
@@ -59,5 +57,7 @@
       <div class="wrapper"></div>
     </footer>
   </body>
-  <script src="script.js"></script>
+  <script src="./scripts/arrays.js"></script>
+  <script src="./scripts/templates.js"></script>
+  <script src="script.js"></script> 
 </html>
