to the top button ready

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- header -->
-    <header>
+    <header id="header">
       <div class="wrapper header-wrapper">
         <div class="header-content">
           <img src="./assets/icons/icons8-book-50.png" alt="" />
@@ -34,7 +34,9 @@
       </div>
     </header>
 
-    <main>
+    <a href="#main" id="toTheTopButton" class="toTheTopButton"><img class="upButton" src="./assets/icons/icons8-up-50.png" alt=""></a>
+
+    <main id="main">
       <section id="bookSection" class="book-section">
         <div id="bookWrapper" class="wrapper"></div>
       </section>
