--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header id="header">
       <div class="wrapper header-wrapper">
         <div class="header-content">
-          <img src="./assets/icons/icons8-book-50.png" alt="" />
+          <img class="bookstore-logo" src="./assets/icons/icons8-book-50.png" alt="" />
           <span class="bookStoreName">DAhlia</span>
         </div>
         <div class="dropdown-filter-box">
